<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/tvSalaryTitle"
        style="@style/SalaryTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary_calculator_title"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRawSalary"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/label_raw_salary"
        app:layout_constraintBottom_toBottomOf="@+id/etRawSalary"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/etRawSalary" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etRawSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:mask="##,##"/>

    <TextView
        android:id="@+id/tvDependenciesNumber"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/label_dependencies_number"
        app:layout_constraintBottom_toBottomOf="@+id/etDependentsNumber"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/etDependentsNumber" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDependentsNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/tvRawSalary" />

    <TextView
        android:id="@+id/tvOtherDiscounts"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/label_other_discounts"
        app:layout_constraintBottom_toBottomOf="@+id/etOtherDiscounts"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/etOtherDiscounts" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etOtherDiscounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/tvDependenciesNumber" />

    <Button
        android:id="@+id/btCalculateSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/bt_calculate"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/etOtherDiscounts" />


</androidx.constraintlayout.widget.ConstraintLayout>